# bose

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
cose-openssl-ffi/: Cargo.toml
scripts/: ffi-test.sh  san-test.sh  setup-everparse.sh  setup-openssl.sh  setup-ubuntu.sh
src/: cbor.rs  cose.rs  lib.rs  ossl_wrappers.rs  sign.rs  verify.rs
tests/ffi_test/: ffi_test.cpp
tests/ffi_test/keys/: ec_priv_der.der  ec_pub_der.der  mldsa_priv_der.der  mldsa_pub_der.der
